--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@ function check(form)/*function to check userid & password*/
  /*the following code checkes whether the entered userid and password are matching*/
  if(form.userid.value == "user" && form.pswrd.value == "password")
   {
-    window.open('h3nrym.github.io/index2.html')/*opens the target page while Id & password matches*/
+    window.open('index2.html')/*opens the target page while Id & password matches*/
   }
  else
  {
