--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@ Login page
 <body>
 <h1 style="font-family:Times New Roman;text-align="center";font-size:20pt;
 color:#00FF00;>
-Simple Login Page
+Login :)
 </h1>
 <form name="login">
 Username<input type="text" name="userid"/>
