--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ td {
 <html>
 <body>
 
-<p>Select your favorite browser:</p>
+<p>Select your favorite album!</p>
 <form action="/action_page.php">
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Diana Ross Presents the Jackson 5">Diana Ross Presents the Jackson 5<br>
     <input type="radio" name="album" onclick="myFunction(this.value)" value="ABC">ABC<br>
