--- a/index4.html
+++ b/index4.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html>
+ Thank You For Taking Our Survey
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  p.s. ur baaaaaad areej
+  </html>
