--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ td {
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Skywriter">Skywriter<br>
 
   Your favorite album is: <input type="text" id="result">
-  <input type="submit" value="Submit form">
+  <a href="h3nrym.github.io/index4.html"><input type="submit" value="Submit form">
 </form>
 
 <script>
