--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ td {
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Goin' Back to Indiana">Goin' Back to Indiana<br>
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Greatest Hits">Greatest Hits<br>
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Lookin' Through The Windows">Lookin' Through The Windows<br>
-    <input type="radio" name="album" onclick="h3nrym.github.io/index4.html" value="Skywriter">Skywriter<br>
+    <input type="radio" name="album" onclick="myFunction(this.value)" value="Skywriter">Skywriter<br>
 
   Your favorite album is: <input type="text" id="result">
   <input type="submit" value="Submit form">
