--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ td {
 <body>
 
 <p>Select your favorite album!</p>
-<form action="h3nrym.github.io/index4.html">
+<form action="index4.html">
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Diana Ross Presents the Jackson 5">Diana Ross Presents the Jackson 5<br>
     <input type="radio" name="album" onclick="myFunction(this.value)" value="ABC">ABC<br>
     <input type="radio" name="album" onclick="myFunction(this.value)" value="Third Album">Third Album<br>
