--- a/index4.html
+++ b/index4.html
@@ -1,31 +1,4 @@
 <!DOCTYPE html>
 <html>
- Thank You For Taking Our Survey
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  p.s. ur baaaaaad areej
-  </html>
+Thank You For Taking Our Survey! 
+¡Gracias por tomar nuestra encuesta!
