--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@ function myFunction(browser) {
 }
 </script>
 
+    var funFacts = ["MJ was the most awarded artist of all time", "Billie Jean was the first music video by a black artist", "MJ made the most money out of any artist after death"];
+    text (funFacts =[0],10,10);
+    text (funFacts =[1],20,10);
+    text (funFacts =[2], 30, 10);   
+    
 </body>
 </html>
     </body>
