--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ function myFunction(browser) {
 </script>
 
     var funFacts = ["MJ was the most awarded artist of all time", "Billie Jean was the first music video by a black artist", "MJ made the most money out of any artist after death"];
+    fill(500,0,0);
     text (funFacts =[0],10,10);
     text (funFacts =[1],20,10);
     text (funFacts =[2], 30, 10);   
