--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <hr/>
       
       <h2>FIRST Robotics</h2>
-      <a href="https://h3nrym.github.io/index2.html"> <img src="https://github.com/H3nryM/H3nryM.github.io/blob/home-page/Images/62.jpg"> </a>
+      <a href="https://h3nrym.github.io/index2.html"> <img src="https://raw.githubusercontent.com/H3nryM/H3nryM.github.io/home-page/Images/62.jpg"> </a>
       <hr/>
       
       <h2>EV Precharge Circuit</h2>
