More playing with font sizes

--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
       
       h1 {
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
-        font-size: 200;
-        line-height: 10px;
+        font-size: 50vw;
         padding: 0px;
-        padding-top: 20px;
-        padding-bottom: 20px;
       }
       h2 {
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
-        font-size: 125;
-        line-height: 0px;
-        padding: 0px;
+        font-size: 20vw;
       }
       h3{
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
