--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       
       h1 {
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
-        font-size: 50vw;
+        font-size: 15vmin;
         padding: 0px;
       }
       h2 {
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
-        font-size: 20vw;
+        font-size: 10vmin;
       }
       h3{
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
