--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
       h1 {
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
         font-size: 15vmin;
-        padding: 0px;
+        padding: 0;
+        padding-bottom: 10px;
         margin:-10px;
       }
       h2 {
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
         font-size: 10vmin;
+        padding-bottom: 5;
         margin:-10px;
       }
       h3{
