Hopefully final margin edit
but probably not

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
         font-size: 15vmin;
         padding: 0;
-        padding-bottom: 20px;
+        padding-bottom: 18px;
         margin:-10px;
       }
       h2 {
@@ -26,9 +26,10 @@
       }
       h3{
         font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
-        font-size: 40;
+        font-size: 5vmin;
         line-height: 0px;
         padding: 0px;
+        margin: 10px;
       }
       
       img{
