--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         font-size: 5vmin;
         line-height: 0px;
         padding: 0px;
+        padding-bottom: 8px;
         margin: 10px;
       }
       
