--- a/Contact.html
+++ b/Contact.html
@@ -69,7 +69,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-palette-1-base u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-expanded-width u-form u-form-1">
-                    <form action="scripts/form-058b.php" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="customphp" name="form" style="padding: 10px;">
+                    <form action="https://gmail.us11.list-manage.com/subscribe/post?u=e2b03734bad19ee4573b039cd&amp;amp;id=d88c607aa7&amp;amp;f_id=001998e0f0" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="mailchimp" name="form" style="padding: 10px;">
                       <div class="u-form-group u-form-name">
                         <label for="name-102e" class="u-label">Name</label>
                         <input type="text" placeholder="Enter your Name" id="name-102e" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
