--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="HENRY MAZAIKA, MAKER">
     <meta name="description" content="">
+    <meta property="og:image" content="images/portfoliopreview.png" />
     <title>Home</title>
     <link rel="stylesheet" href="mypage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
