--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,12 @@
     <meta name="description" content="">
     <meta property="og:image" content="images/portfoliopreview.png" />
     <title>Home</title>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+	
     <link rel="stylesheet" href="mypage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" "="" defer=""></script>
