adding site icon

--- a/VT-Course-Planner.html
+++ b/VT-Course-Planner.html
@@ -5,6 +5,12 @@
     <meta name="keywords" content="FIRST Robotics Competition, Team, Team 7419&amp;apos;s 2021 Robot, Rookie Season, FIRST Tech Challenge, Gracious Professionalism">
     <meta name="description" content="">
     <title>VT Course Planner</title>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+	
     <link rel="stylesheet" href="mypage.css" media="screen">
 <link rel="stylesheet" href="VT-Course-Planner.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" "="" defer=""></script>
