--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <br>
                   </p>
                   <p class="u-text u-text-3">
-                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="FIRST-Robotics.html" data-page-id="612701227"> Click to learn more!</a>
+                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="Autonomous-Car-Charger.html" data-page-id="612701227"> Click to learn more!</a>
                   </p>
                 </div>
               </div>
@@ -238,7 +238,7 @@
                     <br>
                   </p>
                   <p class="u-text u-text-3">
-                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="FIRST-Robotics.html" data-page-id="612701227"> Click to learn more!</a>
+                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="End-Grain-Cutting-Board.html" data-page-id="612701227"> Click to learn more!</a>
                   </p>
                 </div>
               </div>
