--- a/VT-Astrobotics.html
+++ b/VT-Astrobotics.html
@@ -93,6 +93,32 @@
         </div>
       </div>
     </section>
+    <section class="u-clearfix u-grey-5 u-section-3" id="carousel_38da">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout" style="">
+            <div class="u-layout-row" style="">
+              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-radius-15 u-size-30 u-size-xs-60 u-layout-cell-1" src="">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-uploaded-video u-video u-video-contain u-video-1">
+                    <div class="embed-responsive embed-responsive-1">
+                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="np://user.desktop.nicepage.com/Site_89068447/files/opencv1.gif" frameborder="0" allowfullscreen=""></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="u-align-left u-container-style u-layout-cell u-radius-15 u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2" src="">
+                <div class="u-container-layout u-container-layout-2" src="">
+                  <h2 class="u-align-center u-text u-text-grey-90 u-text-1">Object Detection</h2>
+                  <p class="u-align-center u-custom-font u-font-ubuntu u-text u-text-2">To avoid obstacles, such as large rocks, the first step is knowing where they are. A great way to do this is with computer vision, because this lets us identify both how large the object is as well as where it is located relative to our robot. Using my code, now we can autonomously pathfind around obstacles (The gif is just an example with objects on my floor).</p>
+                  <a href="https://docs.opencv.org/4.x/index.html" class="u-border-none u-btn u-btn-round u-button-style u-palette-4-light-1 u-radius-50 u-btn-1" target="_blank">OpenCV Docs</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="u-carousel u-slide u-block-d27c-1" id="carousel_0ccd" data-interval="5000" data-u-ride="false">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-d27c-2">
         <li data-u-target="#carousel_0ccd" data-u-slide-to="0" class="u-active u-grey-30"></li>
