--- a/VT-Astrobotics.html
+++ b/VT-Astrobotics.html
@@ -82,7 +82,7 @@
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-align-center u-text u-text-grey-90 u-text-1">Virginia Tech Astrobotics</h2>
                   <p class="u-align-center u-custom-font u-font-ubuntu u-text u-text-2">VT Astrobotics is an advanced design team, requiring collaboration from across disciplines, including mining engineering, computer science, electrical engineering, and more! It is the culmination of many hardworking students as well as faculty advisors that results in a robot we can all be proud of.</p>
-                  <a href="https://www.7419.tech/" class="u-border-none u-btn u-btn-round u-button-style u-palette-4-light-1 u-radius-50 u-btn-1" target="_blank">VT Astrobotics' Website</a>
+                  <a href="https://vtastrobotics.mystrikingly.com/" class="u-border-none u-btn u-btn-round u-button-style u-palette-4-light-1 u-radius-50 u-btn-1" target="_blank">VT Astrobotics' Website</a>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-image u-image-round u-layout-cell u-radius-15 u-right-cell u-size-30 u-size-xs-60 u-image-1" src="" data-image-width="1200" data-image-height="800">
