--- a/VT-Astrobotics.html
+++ b/VT-Astrobotics.html
@@ -102,7 +102,7 @@
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-uploaded-video u-video u-video-contain u-video-1">
                     <div class="embed-responsive embed-responsive-1">
-                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="Images/opencv1.gif" frameborder="0" allowfullscreen=""></iframe>
+                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="images/opencv1.gif" frameborder="0" allowfullscreen=""></iframe>
                     </div>
                   </div>
                 </div>
