--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <section class="u-align-center u-clearfix u-video u-video-contain u-shading u-section-1" src="" data-image-width="959" data-image-height="720" id="sec-b8d3">
       <div class="u-background-video u-expanded" style="filter: brightness(0.55);">
         <div class="embed-responsive embed-responsive-1">
-          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/L7bPxusxVqQ?playlist=L7bPxusxVqQ&amp;start=795&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+          <!-- <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/XwtQImCOyvM?playlist=XwtQImCOyvM&amp;start=795&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe> -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/XwtQImCOyvM?si=jiMZ3y9p55KQogpk&amp;controls=0&amp;start=795&amp;autoplay=1&amp;mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
       <div class="u-clearfix u-sheet u-sheet-1">
